<?xml version="1.0"?>
<package format="2">
  <name>noether_filtering</name>
  <version>0.0.0</version>
  <description>The noether_filtering package</description>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>
  <author email="jrgnichodevel@gmail.com">Jorge Nicho</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>pcl</depend>
  <depend>vtk</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  	<noether_filtering plugin="${prefix}/mesh_filters_plugins.xml"/>
  </export>
</package>
