<?xml version="1.0"?>
<package format="2">
  <name>noether_filtering</name>
  <version>0.0.0</version>
  <description>The noether_filtering package</description>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>
  <author email="jrgnichodevel@gmail.com">Jorge Nicho</author>

  <depend>libconsole-bridge-dev</depend>
  <depend>pluginlib</depend>
  <depend>libpcl-all-dev</depend>
  <export>
    <build_type>cmake</build_type>
    <noether_filtering plugin="${prefix}/mesh_filter_plugins.xml"/>
    <noether_filtering plugin="${prefix}/cloud_filter_plugins.xml"/>
  </export>
</package>
