<?xml version="1.0"?>
<package format="2">
  <name>noether_msgs</name>
  <version>0.0.0</version>
  <description>The noether_msgs package</description>
  <maintainer email="jorge.nicho@swri.org">Jorge Nicho</maintainer>  
  <author email="jorge.nicho@swri.org">Jorge Nicho</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>heat_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>pcl_msgs</depend>

</package>
