<?xml version="1.0"?>
<package>
  <name>noether_simulator</name>
  <version>0.0.0</version>
  <description>The noether_simulator package</description>
  <maintainer email="alex.goins@swri.org">alex</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mesh_segmenter</build_depend>
  <build_depend>tool_path_planner</build_depend>
  <build_depend>path_sequence_planner</build_depend>
  <build_depend>vtk_viewer</build_depend>
  <build_depend>mesh_segmenter</build_depend>
  <build_depend>vtk_viewer</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>mesh_segmenter</run_depend>
  <run_depend>tool_path_planner</run_depend>
  <run_depend>path_sequence_planner</run_depend>
  <run_depend>vtk_viewer</run_depend>
  <run_depend>mesh_segmenter</run_depend>
  <run_depend>vtk_viewer</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


</package>
